--- a/style.css
+++ b/style.css
@@ -8,4 +8,121 @@ html,
 body {
   height: 100%;
   width: 100%;
+  background-color: #d5ff40;
+}
+main {
+  height: 100%;
+  width: 100%;
+}
+nav {
+  padding: 60px 100px;
+  height: 80px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav .part2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 140px;
+}
+nav h2 {
+  font-size: 50px;
+  font-weight: 500;
+}
+nav a {
+  font-size: 25px;
+  text-decoration: none;
+  color: black;
+}
+
+section {
+  /* background-color: aqua; */
+  padding: 60px 100px;
+}
+
+section #herotext1 {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+#herotext1 h1 {
+  font-size: 300px;
+  font-weight: 900;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+#herotext1 #video {
+  height: 150px;
+  width: 500px;
+  background-color: black;
+  border-radius: 100px;
+  margin-top: 50px;
+  background-image: url(https://images.unsplash.com/photo-1730369624412-2e474536ee18?q=80&w=3432&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
+  background-position: right;
+  padding: 5px;
+}
+#video .play {
+  height: 100%;
+  width: 160px;
+  background-color: black;
+  border-radius: 100px;
+  background-color: black;
+  border: 4px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.play i {
+  font-size: 100px;
+  color: white;
+}
+section #herotext2 {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+#herotext2 h1 {
+  font-size: 300px;
+  font-weight: 900;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+#herotext2 p {
+  font-size: 40px;
+  width: 700px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
+.image {
+  height: 1200px;
+  width: 90%;
+  position: relative;
+  margin-left: 5%;
+  background-color: red;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  background-image: url(https://images.unsplash.com/photo-1655711789589-b6367b970712?q=80&w=3489&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-position: center;
+  background-size: cover;
+  margin-top: 100px;
+}
+.image .arrow {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  position: absolute;
+  right: 0%;
+  top: -10%;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border: 4px solid #444;
+}
+.arrow i {
+  font-size: 100px;
 }
